Add Networking, Architecture, fetch data

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.shikherverma.todayontv.ScheduleActivity">
+    tools:context="com.shikherverma.todayontv.view.activities.ScheduleActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
