--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="card_corner_radius">3dp</dimen>
     <dimen name="card_elevation">3dp</dimen>
     <dimen name="card_whitespace">12dp</dimen>
+    <dimen name="error_whitespace">12dp</dimen>
 </resources>
