--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorError">@color/colorGrey</item>
         <item name="headingTextAppearance">@style/TextBoldMedium</item>
         <item name="normalTextAppearance">@android:style/TextAppearance.Small</item>
     </style>
