--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="card_selected_elevation">9dp</dimen>
     <dimen name="card_whitespace">12dp</dimen>
     <dimen name="error_whitespace">12dp</dimen>
+    <dimen name="card_image_size">150dp</dimen>
 </resources>
