--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="card_selected_elevation">6dp</dimen>
     <dimen name="card_whitespace">8dp</dimen>
     <dimen name="error_whitespace">8dp</dimen>
+    <dimen name="card_image_size">100dp</dimen>
 </resources>
